# plumb-line

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FEEDBACK.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  requirements-test.in  requirements-test.txt  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/bundled/primitives/js/: audit.mjs  index.mjs  provenance.mjs
.claude-plugin/bundled/primitives/python/: audit.py  marked.py
.githooks/: prepare-commit-msg
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feedback.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  python-eol-reminder.yml  release.yml  scorecard.yml
adapters/: adapter-contract.md
adapters/js/: eslint-boundary.template.cjs  eslint-provenance.template.cjs  eslint.config.mjs  package-lock.json  package.json  vitest.config.mjs
adapters/js/hooks/: boundary-guard.mjs  branch-guard.mjs  pre-commit-gate.mjs
adapters/js/hooks/__tests__/: boundary-guard.test.mjs  boundary-lint.integration.test.mjs  branch-guard.test.mjs  pre-commit-gate.test.mjs
adapters/js/provenance-lint/: README.md  index.cjs  module-match.cjs  no-provenance-bypass.cjs  require-provenance-output.cjs
adapters/js/provenance-lint/__tests__/: index.test.mjs  module-match.test.mjs  no-provenance-bypass.test.mjs  (+1 more)
adapters/python/: importlinter-boundary.template.ini  provenance_lint.py  pyproject.toml  test_provenance_lint.py
adapters/python/hooks/: boundary_guard.py  branch_guard.py  pre_commit_gate.py  test_hooks.py
docs/: dogfood-results.md  dogfood.md  dogfooding.md  feedback.html  index.html  ossf-silver-gap-analysis.md  release-harness.md  threat-model.md  validation-results.md
docs/adr/: 0001-domain-neutral-by-construction.md  0002-packaged-as-a-collection.md  0003-two-enforcement-adapters-at-v1.md  0004-enforcement-parameterized-no-defaults.md  0005-provenance-primitive-one-law-two-layers.md  0006-build-docs-strategy.md  0007-branch-guard-hardening.md  0008-zero-input-conformance-fix-no-wire-bump.md  0009-checker-totality-non-object-parity.md  0010-wire-v2-schema-batch.md  0011-enforcement-rule-scoping.md  0012-ecosystem-adapters-optional-deps-and-mapping.md  0013-dataframe-adapters-explicit-combinators.md  README.md
docs/plans/: 2026-06-28-plumb-line.md
docs/specs/: 2026-06-28-plumb-line-design.md
docs/superpowers/plans/: 2026-07-01-v0.4.1-legible-audit.md
docs/superpowers/specs/: 2026-07-01-v0.4.1-legible-audit-design.md
examples/: AUDIT-EXPECTATIONS.md  REMEDIATE-EXPECTATIONS.md  test_fixture_integrity.py
examples/js-payments-service/: README.md
examples/js-payments-service/broken/: VIOLATIONS.md
examples/python-data-pipeline/: README.md  test_boundary_lint.py
examples/python-data-pipeline/broken/: VIOLATIONS.md
primitives/: PARITY.md  README.md  SPEC.md
primitives/conformance/: README.md  cases.json  http-cases.json  report.mjs
primitives/js/: README.md  audit.mjs  audit.test.mjs  conformance.test.mjs  eslint.config.mjs  http.mjs  http.test.mjs  index.mjs  marked.mjs  marked.test.mjs  package-lock.json  package.json  property.test.mjs  provenance.mjs  provenance.test.mjs  vitest.config.mjs
primitives/python/: README.md  __init__.py  arrays.py  audit.py  frames.py  http.py  marked.py  provenance.py  pyproject.toml  test_audit.py  test_marked.py  test_provenance.py
primitives/python/tests/: conftest.py  test_arrays.py  test_audit.py  test_conformance.py  test_frames.py  test_http.py  test_import_guard.py  test_marked.py  test_provenance.py
reference/: portable-principles.md  ruleset-template.md
scripts/: bump-version.mjs  check-bundle-conformance.mjs  check-bundle-sync.mjs  check-lock-sync.py  check-versions.mjs  check_adapter_guarded_imports.py  check_http_guarded_imports.py  test_bundle_conformance.py
skills/plumb-line-audit/: SKILL.md
skills/plumb-line-bootstrap/: SKILL.md
skills/plumb-line-method/: SKILL.md
skills/plumb-line-remediate/: SKILL.md
(+17 files in other folders)
